# app-solana

./: Cargo.toml  README.md  package.json
client/: index.js
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
